syntax = "proto3";

package work;
option go_package = "github.com/pachyderm/pachyderm/v2/src/internal/work";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

enum State {
  STATE_UNKNOWN = 0;
  RUNNING = 1;
  SUCCESS = 2;
  FAILURE = 3;
}

message Task {
  string id = 1 [(gogoproto.customname) = "ID"];
  google.protobuf.Any data = 2;
}

message TaskInfo {
  Task task = 1;
  State state = 2;
  string reason = 3;
  google.protobuf.Any result = 4;
}

message Claim {}

message TestData {
  bool processed = 1;
}
